package com.task;

@FunctionalInterface
public interface canAttack {
    int getAttack();
}
