@startuml
'https://plantuml.com/class-diagram

abstract class HealingProcessor
class Warrior
class Fanatic
class Healer
class Knight
class Lancer
class Rookie
class Vampire
class Warlord
class Witch
class Defender

class Army
class Battle
class Weapon

interface canAttack

HealingProcessor <|-- Warrior

Warrior <|-- Witch
Warrior <|-- Fanatic
Warrior <|-- Healer
Warrior <|-- Knight
Warrior <|-- Lancer
Warrior <|-- Rookie
Warrior <|-- Defender
Warrior <|-- Vampire
Defender <|-- Warlord

@enduml